[gd_scene load_steps=18 format=3 uid="uid://c7cjpp05jcbcu"]

[ext_resource type="Script" uid="uid://bebu27wu2rcn6" path="res://entities/itens/bomb/bomb.gd" id="1_wuxqo"]
[ext_resource type="Texture2D" uid="uid://3fk3bequ7hcw" path="res://assets/sprites/itens/bomb_thrown_anim_strip_3.png" id="2_yw362"]
[ext_resource type="Texture2D" uid="uid://bfc6mrvxydeqh" path="res://assets/sprites/itens/bomb_on_ground_anim_strip_8.png" id="3_v8onk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a04j6"]
atlas = ExtResource("3_v8onk")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuegm"]
atlas = ExtResource("3_v8onk")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_a13dj"]
atlas = ExtResource("3_v8onk")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e63q"]
atlas = ExtResource("3_v8onk")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm1bd"]
atlas = ExtResource("3_v8onk")
region = Rect2(32, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wsnu"]
atlas = ExtResource("3_v8onk")
region = Rect2(40, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jqkb"]
atlas = ExtResource("3_v8onk")
region = Rect2(48, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1c3b"]
atlas = ExtResource("3_v8onk")
region = Rect2(56, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_685fc"]
atlas = ExtResource("2_yw362")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8awu"]
atlas = ExtResource("2_yw362")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbihq"]
atlas = ExtResource("2_yw362")
region = Rect2(16, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_tcjp4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a04j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuegm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a13dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e63q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm1bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wsnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jqkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1c3b")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"dropped",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_685fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8awu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbihq")
}],
"loop": true,
"name": &"thrown",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6j2mg"]
size = Vector2(8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_wuxqo"]

[node name="Bomb" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 48
script = ExtResource("1_wuxqo")

[node name="Animator" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tcjp4")
animation = &"dropped"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_6j2mg")

[node name="PreviewArea" type="Area2D" parent="."]
visible = false

[node name="PreviewAreaShape" type="CollisionShape2D" parent="PreviewArea"]
shape = SubResource("CircleShape2D_wuxqo")

[connection signal="animation_finished" from="Animator" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="Animator" to="." method="_on_animator_frame_changed"]
